--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
 	<body>
 		<nav>
 			<ul>
-				<li><a href="#">Home</a></li>
-				<li><a href="#">Install</a></li>
-				<li><a href="#">About</a></li>
+				<li><a class="pages" href="#">Home</a></li>
+				<li><a class="pages" href="#">Install</a></li>
+				<li><a class="pages" href="#">About</a></li>
+					<li><a class="facebook" href="#"> </a></li>
+					<li><a class="twitter" href="#">  </a></li>
+					<li><a class="youtube" href="#"> </a></li>
 			</ul>
+			
 		</nav>
 		<h1>Sass Learning!</h1>
 		<p>Sass or SCSS? Here we go!</p>
@@ -21,6 +25,11 @@
 		<section class="mini-section">
 			<p>Any notes inside this might be useful.</p>
 		</section>
-
+		<section class="starred">
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin finibus est augue, non imperdiet justo tincidunt vitae. Ut mauris sem, eleifend vel sapien a, luctus bibendum diam. Nullam suscipit purus magna, vel consectetur purus auctor non. Sed vitae nisi eget mauris sodales fermentum non sit amet ante. Fusce facilisis luctus venenatis. Suspendisse potenti. Proin commodo in nulla sit amet efficitur. Mauris eu augue sed tortor convallis eleifend id nec mi. Aliquam erat volutpat. Fusce a ex urna. Donec sagittis lobortis pulvinar. Nam dapibus sem vel risus ornare, a iaculis orci tempus. Duis porttitor finibus justo, vel efficitur mi eleifend in. </p>
+		</section>
+		<section class="mini-section">
+			<p>Any notes inside this might be useful.</p>
+		</section>
 	</body>
 </html>
